--- a/css/main.css
+++ b/css/main.css
@@ -251,7 +251,7 @@ input[type=button].button-turquoise {
 }
 
 .main-interactive-image {
-  border-top: 1px solid #DCDDE0;
+  border-top: 1px solid #E9EAEC;
   padding: 40px 0;
 }
 
