--- a/css/main.css
+++ b/css/main.css
@@ -263,13 +263,31 @@ input[type=button].button-turquoise {
 .main-interactive-image .try-it .label {
   color: #6d7180;
   font-weight: 300;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .main-interactive-image .try-it .iiif-url {
   background-color: #fff;
   font-family: 'Inconsolata', sans-serif;
   word-wrap: break-word;
+}
+
+.try-it .iiif-url .params {
+  float: left;
+  margin: 0 0px;
+}
+
+.try-it .iiif-url .param-label {
+  border-bottom: 1px dotted #ccc;
+  color: #999;
+  font-size: 10px;
+  font-weight: italic;
+  margin-bottom: 2px;
+  text-align: center;
+}
+
+.try-it .iiif-url .param-label-none {
+  margin-bottom: 2px;
 }
 
 .main-interactive-image .try-it .iiif-url select {
@@ -321,7 +339,7 @@ input[type=button].button-turquoise {
   text-align: center;
 }
 
-.main-highlight-blurbs .highlight h2 {
+.main-highlight-blurbs .highlight h2, .try-it h2 {
   color: #2e8b74;
   font-family: 'Raleway', Arial, sans-serif;
   font-size: 22px;
