--- a/css/main.css
+++ b/css/main.css
@@ -277,17 +277,18 @@ input[type=button].button-turquoise {
   margin: 0 0px;
 }
 
-.try-it .iiif-url .param-label {
+.try-it .iiif-url .param-label, .try-it .iiif-url .param-label-none {
   border-bottom: 1px dotted #ccc;
   color: #999;
   font-size: 10px;
   font-weight: italic;
-  margin-bottom: 2px;
+  line-height: 1.6;
+  margin-bottom: 4px;
   text-align: center;
 }
 
 .try-it .iiif-url .param-label-none {
-  margin-bottom: 2px;
+  border: 0;
 }
 
 .main-interactive-image .try-it .iiif-url select {
