--- a/css/main.css
+++ b/css/main.css
@@ -392,7 +392,7 @@ input[type=button].button-turquoise {
 
 .footer-container {
   border-top: 1px solid #dbdde0;
-  font-size: 10px;
+  font-size: x-small;
   padding: 20px 0;
 }
 
