--- a/css/main.css
+++ b/css/main.css
@@ -199,7 +199,7 @@ nav a:hover {
   padding-bottom: 30px;
 }
 
-.technical-details .section-quick-links .button-turquoise {
+.technical-details .section-quick-links a.button-turquoise {
   margin-left: 20px;
   margin-right: 20px;
 }
@@ -238,12 +238,10 @@ nav a:hover {
   word-spacing: 1px;
 }
 
-input[type=button].button-turquoise {
+a.button-turquoise {
   background-color: #00bc99;
   border: 0;
-  /*border-right: 1px solid #2e8b74;*/
   border-bottom: 3px solid #2e8b74;
-  /*border-left: 1px solid #2e8b74;*/
   border-radius: 4px;
   color: #fff;
   font-family: 'Open Sans', Arial, sans-serif;
@@ -418,7 +416,6 @@ input[type=button].button-turquoise {
   padding: 0;
 }
 
-
 .sub-pages section.image-viewers ul,
 .sub-pages section.image-servers ul,
 .sub-pages section.impl-demos ul {
@@ -514,13 +511,17 @@ input[type=button].button-turquoise {
     font-size: 17px;
   }
 
-  input[type=button].button-turquoise {
+  a.button-turquoise {
     font-size: 15px;
     padding: 12px 24px;
   }
 
-  .main-blurb .button-turquoise {
-    margin: 0 10px;
+  .main-blurb .buttons {
+    padding: 15px 0 10px 0;
+  }
+
+  .main-blurb a.button-turquoise {
+    margin: 10px;
   }
 
 /* ========================
