--- a/css/main.css
+++ b/css/main.css
@@ -193,10 +193,17 @@ nav a:hover {
   margin-bottom: 20px;
 }
 
+.technical-details article header {
+  margin-bottom: 0;
+}
+
 .technical-details .section-quick-links {
-  border-bottom: 1px dotted #dbdde0;
+  background-color: #F7F7F8;
+  border-bottom: 1px solid #dbdde0;
+  overflow: auto;
+  /*padding-bottom: 30px;*/
+  padding: 30px 0 32px 0;
   text-align: center;
-  padding-bottom: 30px;
 }
 
 .technical-details .section-quick-links a.button-turquoise {
