More CSS changes to community page

--- a/css/main.css
+++ b/css/main.css
@@ -432,6 +432,10 @@ a.button-turquoise {
 }
 
 
+.sub-pages section.participants ul {
+  padding-left: 60px;
+}
+
 /* ===============
   ALL: IE Fixes
    =============== */
